# Android-DataBackup

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  README_EN.md  README_RU.md  README_TW.md  README_UK.md  README_ru.md  README_uk.md  README_zh-rCN.md  README_zh-rTW.md  build.gradle  build.gradle.kts  build_bin.sh  gradle.properties  settings.gradle  settings.gradle.kts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bin.yaml  build.yaml  lint.yaml  main.yml  release-please.yml
app/: .gitignore  build.gradle  build.gradle.kts  google-services.json  proguard-rules.pro
app/schemas/com.xayah.databackup.model.app.AppDatabase/: 1.json
app/src/main/: AndroidManifest.xml
check/: README.md
check/Linux/: check.sh
check/Windows/Win32/: check.bat
crash/: build.gradle
crash/src/main/: AndroidManifest.xml
design/: build.gradle
dex/: README.md  build.gradle.kts  settings.gradle.kts
dex/app/: build.gradle.kts
dex/gradle/: libs.versions.toml
dex/gradle/wrapper/: gradle-wrapper.properties
dex/hiddenapi/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libhiddenapi/: build.gradle
librootservice/: build.gradle  build.gradle.kts
source/: build.gradle.kts  gradle.properties  settings.gradle.kts
source-next/: .gitignore  AGENTS.md  build.gradle.kts  gradle.properties  settings.gradle.kts
source-next/app/: build.gradle.kts
source-next/gradle/: gradle-daemon-jvm.properties  libs.versions.toml
source-next/gradle/wrapper/: gradle-wrapper.properties
source-next/hiddenapi/: build.gradle.kts
source-next/native/: build.gradle.kts
source-next/native/src/main/jni/nativelib/: CMakeLists.txt  nativelib.cpp
source-next/native/src/main/jni/rustic/: .gitignore  CMakeLists.txt  Cargo.toml  rustic.cpp  rustic.map
source-next/native/src/main/jni/rustic/src/: error.rs  jni_bridge.rs  jni_progress.rs  lib.rs  progress.rs  repository.rs
source-next/native/src/main/jni/rustic/tests/: base_test.rs
source/app/: .gitignore  build.gradle.kts  google-services.json  proguard-rules.pro
source/benchmark/: build.gradle.kts
source/build-logic/convention/: build.gradle.kts
source/core/common/: build.gradle.kts
source/core/data/: build.gradle.kts
source/core/database/: build.gradle.kts
source/core/datastore/: build.gradle.kts
source/core/hiddenapi/: build.gradle.kts
source/core/model/: build.gradle.kts
source/core/network/: build.gradle.kts
source/core/provider/: build.gradle.kts
source/core/rootservice/src/main/cpp/: CMakeLists.txt  nativelib.cpp
source/gradle/: libs.versions.toml
source/libhiddenapi/: build.gradle.kts
source/librootservice/: build.gradle.kts
source/native/: build.gradle.kts
terminal-emulator/: build.gradle
terminal-view/: build.gradle
termux-shared/: build.gradle
(+2230 files in other folders)
